<resources>
    <string name="app_name">用材林調査 Plus+</string>
    <string name="title1">ID</string>
    <string name="title2">調査No</string>
    <string name="title3">所有者</string>
    <string name="title4">地番</string>
    <string name="surveyNo">調査番号</string>
    <string name="ownerName">所有者</string>
    <string name="timoku">地目</string>
    <string name="aza">字</string>
    <string name="tiban">地番</string>
    <string name="oaza">大字</string>
    <string name="city">市区町村</string>
    <string name="pref">都道府県</string>
    <string name="surveyYmd">調査年月日</string>
    <string name="ownerOK">OK</string>
    <string name="ownerCancel">閉じる</string>
    <string name="contTreeOK">追加</string>
    <string name="contTreeCancel">キャンセル</string>
    <string name="treeTitle1">No</string>
    <string name="treeTitle2">樹種名</string>
    <string name="treeTitle3">胸高直径</string>
    <string name="treeTitle4">備考</string>
    <string name="no">No</string>
    <string name="treeName">樹種名</string>
    <string name="treeList">樹種一覧</string>
    <string name="treeRemark">備考</string>
    <string name="treeSize">胸高直径</string>
    <string name="main_menu_item1">新規作成</string>
    <string name="manytree">（デ）1000件</string>
    <string name="addtree">追加</string>
    <string name="lastTree">最後</string>
    <string name="firstTree">最初</string>
    <string name="delete">削除</string>
    <string name="copy">コピー</string>
    <string name="treelistTitle">樹種名追加</string>
    <string name="treelistMessage">樹種名を入力してください。</string>
</resources>
