<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/treeTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_m"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_marginEnd="@dimen/dp_s"
            android:layout_marginBottom="@dimen/dp_s"
            android:padding="@dimen/dp_m"
            android:background ="@color/title"
            android:text="@string/treeTitle1"/>

        <TextView
            android:id="@+id/treeTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_m"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_marginEnd="@dimen/dp_s"
            android:layout_marginBottom="@dimen/dp_s"
            android:padding="@dimen/dp_m"
            android:background ="@color/title"
            android:text="@string/treeTitle2"/>

        <TextView
            android:id="@+id/treeTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_m"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_marginEnd="@dimen/dp_s"
            android:layout_marginBottom="@dimen/dp_s"
            android:padding="@dimen/dp_m"
            android:background ="@color/title"
            android:text="@string/treeTitle3"/>

        <TextView
            android:id="@+id/treeTitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_m"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp_s"
            android:padding="@dimen/dp_m"
            android:background ="@color/title"
            android:text="@string/treeTitle4"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvTree"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>